<resources>
    <string name="app_name">Travelli</string>
    <string name="home">Home</string>
    <string name="username">Welcome</string>
    <string name="log">Log in /Sign up</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="tours">My Tours</string>
    <string name="fav">Favorite tours</string>
    <string name="nearby">Nearby Tours</string>
    <string name="see_all">See all</string>
    <string name="hotel">By Hotels</string>
    <string name="top">Top Tours</string>
    <string name="notification">Notification</string>
    <string name="or">OR</string>
    <string name="email_here">Email</string>
    <string name="pass">Pass</string>
    <string name="login">Log in</string>
    <string name="forgot_pass">forgot password ??</string>
    <string name="sign_up">Sign up</string>
    <string name="from">From:</string>
    <string name="to">To</string>
    <string name="hs">+</string>
    <string name="controllers">Use Controllers</string>
    <string name="vr_mode">VR mode</string>
    <string name="fullscreen">Full screen mode</string>
    <string name="touch_mode">Choose Touch Mode</string>
    <string name="motion_touch">Choose Motion &amp; Touch</string>
    <string name="tour_date">Tour Date :</string>
    <string name="agency">Agency:</string>
    <string name="reserve">Reserve</string>
    <string name="max_person">Max no. of persons</string>
    <string name="search_hint">Write a name</string>
    <string name="expand">Expand</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse a risus sed nulla faucibus commodo. Donec iaculis pretium facilisis. Praesent rutrum varius arcu, sed viverra ipsum malesuada id. Suspendisse nec mauris eleifend, maximus elit et, venenatis quam. Duis at maximus nisi, a congue sapien. Curabitur facilisis at nisi vitae vulputate. Phasellus vel orci et massa scelerisque ultrices. Morbi eget ipsum porttitor arcu volutpat convallis. Pellentesque velit libero, interdum sed consequat at, eleifend et nisi. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed convallis massa imperdiet, consectetur lectus sodales, finibus velit. Donec quis tortor vel quam porta hendrerit. Vivamus vitae consectetur orci, sed feugiat turpis.</string>
    <string name="collapse">Collapse</string>
    <string name="no_favorites_items">No Favorites</string>
    <string name="no_favorites_msg">Long press on item to add to favorites.</string>
    <string name="user_id">uid</string>
    <string name="user_email">email</string>
    <string name="user_data">data</string>
    <string name="your_review_here">Your review here:</string>
    <string name="enter_review">Enter your review</string>
    <string name="confirrm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="review_submit">Review Submitted</string>
    <string name="conf_pass">Confirm Pass</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="reservation">Reservation</string>
    <string name="reserve_name"> Name </string>
    <string name="booknow"> Book now </string>
    <string name="ok">OK</string>
    <string name="connection_error">Connection error</string>
    <string name="full_name">Full name</string>
    <string name="full_name_empty">Full name is empty</string>
    <string name="email_empty">Email is empty</string>
    <string name="password_empty">Password is empty</string>
    <string name="confirm_password_empty">Confirm Password is empty</string>
    <string name="password_doesnt_match">your passwords doesn\'t match</string>
    <string name="from_to" formatted="false">From: %s\nTo: %s</string>
    <string name="details">Details</string>
    <string name="places">Places</string>
    <string name="reviews">Reviews</string>
    <string name="no">No</string>
    <string name="permission_denied">Permission denied</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_image">Upload image</string>
    <string name="choose_image">Choose Image</string>
    <string name="retry">Retry</string>
    <string name="uploading_image">Uploading an image</string>
    <string name="upload_finished">Upload finished</string>
    <string name="upload_failed">Upload failed!</string>
    <string name="show_slices">Show slices</string>
</resources>
