<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:checked="true"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_tours"
            android:icon="@drawable/ic_flight_black_24dp"
            android:title="@string/tours" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/fav" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/logout"
            android:title="@string/log" />
        </group>
</menu>