<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ahram"
        android:background="@color/light_grey"
        android:scaleType="centerCrop"
        android:layout_gravity="center"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66475d89">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@drawable/rounded"
            android:layout_margin="8dp"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:ems="10"
                android:id="@+id/name"
                android:hint="@string/name" />

            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:padding="10dp"
                android:id="@+id/email"
                android:hint="@string/email_here" />
            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:padding="10dp"
                android:id="@+id/phone"
                android:hint="@string/phone" />
            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:padding="10dp"
                android:id="@+id/pass"
                android:hint="@string/pass" />
            <EditText
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:padding="10dp"
                android:id="@+id/conf_pass"
                android:imeOptions="actionDone"
                android:hint="@string/conf_pass" />
            <Button
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register"
                android:textColor="@android:color/white"
                android:background="@drawable/rounded_button"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>