<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_sign_in"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ahram"
        android:background="@color/light_grey"
        android:scaleType="centerCrop"
        android:layout_gravity="center"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66475d89">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="50dp"
        android:src="@drawable/app_logosmall"
        android:background="@android:color/white"
        android:contentDescription="@string/app_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textColor="@android:color/black"
        android:layout_marginTop="4dp"
        android:textSize="14sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_grey"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailfield"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded"
        >
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:id="@+id/img1"
            android:src="@drawable/account"
            android:layout_gravity="center"
            android:contentDescription="@string/email_here"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:ems="10"
            android:id="@+id/emailText"
            android:hint="@string/email_here" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passfield"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded"
        >
        <ImageView
            android:contentDescription="@string/pass"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/lock"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:id="@+id/passwordText"
            android:imeOptions="actionDone"
            android:hint="@string/pass" />
    </LinearLayout>
    </LinearLayout>
    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/login"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded"
        android:textColor="@android:color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/or"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:layout_marginBottom="4dp"
        />
    <Button
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/signup"
        android:textSize="20sp"
        android:background="@drawable/rounded"
        android:textColor="@android:color/black"
        android:layout_marginBottom="8dp"/>
</LinearLayout>
    </ScrollView>
    </RelativeLayout>
</RelativeLayout>