<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_padding"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <TextView
            android:id="@+id/galleryOption"
            style="@style/LayoutClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/editText_min_height"
            android:padding="16dp"
            android:text="@string/gallery"
            android:textColor="@color/colorPrimaryDark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:alpha=".55"
            android:background="@color/colorPrimaryTrans" />

        <TextView
            android:id="@+id/cameraOption"
            style="@style/LayoutClickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="@dimen/editText_min_height"
            android:padding="16dp"
            android:text="@string/camera"
            android:textColor="@color/colorPrimaryDark" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:alpha=".55"
            android:background="@color/colorPrimaryTrans" />


        <TextView
            android:id="@+id/cancelOption"
            style="@style/LayoutClickable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:gravity="center_vertical"
            android:minHeight="@dimen/editText_min_height"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>
</LinearLayout>