<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_height="match_parent"

    android:layout_width="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/airport_back"
        android:background="@color/light_grey"
        android:scaleType="centerCrop"
        android:layout_gravity="center"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="39dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_people_black_24dp" />

                <EditText
                    android:id="@+id/reserve_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/reserve_name"
                    android:inputType="textPersonName"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="39dp"
                    android:layout_height="47dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_email_black_24dp" />

                <EditText
                    android:id="@+id/reserv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/email_here"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="29dp"
                    android:layout_height="49dp"

                    android:layout_marginTop="18dp"
                    android:src="@drawable/mobile" />

                <EditText
                    android:id="@+id/reserv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:imeOptions="actionDone"
                    android:inputType="text|phone"
                    android:padding="10dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="148dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="100dp"
                    android:layout_marginTop="0dp"
                    android:text=" Number of pepole:" />

                <EditText
                    android:id="@+id/numppl"
                    android:layout_width="73dp"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="-100dp"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </LinearLayout>
            <Button
                android:id="@+id/book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>